# galileo-terremoti

./: .gitignore  .travis.yml  AcceleroMMA7361.cpp  AcceleroMMA7361.h  Accelerometer.h  CMakeLists.txt  CMakeToolchain.cmake  CommandInterface.cpp  CommandInterface.h  Config.cpp  Config.h  Doxyfile  GalileoDateTime.cpp  GalileoDateTime.h  GalileoLED.cpp  GalileoLED.h  GalileoLog.cpp  GalileoLog.h  Galileo_Sapienza.ino  HTTPClient.cpp  HTTPClient.h  LCDMonitor.cpp  LCDMonitor.h  LED.cpp  LED.h  Log.cpp  Log.h  Makefile  NTP.cpp  NTP.h  NetworkManager.cpp  NetworkManager.h  README.md  Seismometer.cpp  Seismometer.h  Utils.cpp  Utils.h  Watchdog.cpp  Watchdog.h  arduino-serial.h  (+28 more)
arduino/: CMakeLists.txt
debian/: README  changelog  control  copyright  files  galileo-terremoti.init  galileo-terremoti.install  galileo-terremoti.postinst  galileo-terremoti.postrm  galileo-terremoti.preinst  galileo-terremoti.prerm  galileo-terremoti.service  galileo-terremoti.substvars  rules
debian/galileo-terremoti/DEBIAN/: control  md5sums
net/: Collector.cpp  Collector.h  DataStream.cpp  DataStream.h  HTTPClient.cpp  HTTPClient.h  IPaddr.cpp  IPaddr.h  MQTT.cpp  MQTT.h  MQTT_Publish.cpp  MQTT_Publish.h  MQTT_Subscribe.cpp  MQTT_Subscribe.h  Makefile  NTP.cpp  NTP.h  NetworkManager.cpp  NetworkManager.h  SCSAPI.cpp  SCSAPI.h  SCSAPI_HTTP.cpp  SCSAPI_HTTP.h  SCSAPI_LocalTest.cpp  SCSAPI_LocalTest.h  SCSAPI_MQTT.cpp  SCSAPI_MQTT.h  Tcp.cpp  Tcp.h  TraceAccumulator.cpp  TraceAccumulator.h  Udp.cpp  Udp.h  WebSocket.cpp  WebSocket.h  mqtt.cpp  mqtt.h  mqttclient.cpp  mqttclient.h
